tests/ui/invalid/invalid-crate-type-macro.rs
#![crate_type = foo!()] //~ ERROR malformed `crate_type` attribute

macro_rules! foo {
    () => {"rlib"};
}

fn main() {}
