tests/ui/invalid/invalid-crate-type-macro.stderr
error: malformed `crate_type` attribute input
  --> $DIR/invalid-crate-type-macro.rs:1:1
   |
LL | #![crate_type = foo!()]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: must be of the form
   |
LL | #![crate_type = "bin|lib|..."]
   | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error

